# books-catalog

./: Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
books_catalog/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
catalog/: admin.py  filters.py  manager.py  models.py  router.py  serializers.py  service.py  viewsets.py
catalog/migrations/: 0001_initial.py
tests/: test_book_viewset.py
